- generated site - fixed horizontal scroll on mobile

--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -332,7 +332,11 @@ ul>li
 	float: right
 
 
+
+
 @media screen and (max-device-width: 750px)
+	.full-page
+		width: 100%
 	.intro .title 
 		font-size: 80px
 	.byline
@@ -345,6 +349,12 @@ ul>li
 	.sidepanel
 		right: 0
 
+
+// Debug content area
+// *
+// 	background: #000 !important
+// 	color: #0f0 !important
+// 	outline: solid #f00 1px !important
 
 // @media only screen and (max-width: 320px)
 // 	body
